style: standardize Java formatting